wx-core/include/generated/ffi_c.h

// CLASS: wxChoicebook
wxClassInfo *wxChoicebook_CLASSINFO();
wxChoicebook *wxChoicebook_new();
wxChoicebook *wxChoicebook_new1(wxWindow * parent, wxWindowID id, const wxPoint * pos, const wxSize * size, long style, const wxString * name);
bool wxChoicebook_Create(wxChoicebook * self, wxWindow * parent, wxWindowID id, const wxPoint * pos, const wxSize * size, long style, const wxString * name);
wxChoice * wxChoicebook_GetChoiceCtrl(const wxChoicebook * self);
// CLASS: wxClipboard
wxClassInfo *wxClipboard_CLASSINFO();
wxClipboard *wxClipboard_new();
bool wxClipboard_AddData(wxClipboard * self, wxDataObject * data);
void wxClipboard_Clear(wxClipboard * self);
void wxClipboard_Close(wxClipboard * self);
bool wxClipboard_Flush(wxClipboard * self);
bool wxClipboard_GetData(wxClipboard * self, wxDataObject * data);
bool wxClipboard_IsOpened(const wxClipboard * self);
bool wxClipboard_IsSupported(wxClipboard * self, const wxDataFormat * format);
bool wxClipboard_IsUsingPrimarySelection(const wxClipboard * self);
bool wxClipboard_Open(wxClipboard * self);
bool wxClipboard_SetData(wxClipboard * self, wxDataObject * data);
void wxClipboard_UsePrimarySelection(wxClipboard * self, bool primary);
wxClipboard * wxClipboard_Get();
// CLASS: wxClipboardTextEvent
wxClassInfo *wxClipboardTextEvent_CLASSINFO();
// CLASS: wxCloseEvent
wxClassInfo *wxCloseEvent_CLASSINFO();
bool wxCloseEvent_CanVeto(const wxCloseEvent * self);
bool wxCloseEvent_GetLoggingOff(const wxCloseEvent * self);
void wxCloseEvent_SetCanVeto(wxCloseEvent * self, bool can_veto);
void wxCloseEvent_SetLoggingOff(wxCloseEvent * self, bool logging_off);
void wxCloseEvent_Veto(wxCloseEvent * self, bool veto);
bool wxCloseEvent_GetVeto(const wxCloseEvent * self);
// CLASS: wxCollapsibleHeaderCtrl
wxClassInfo *wxCollapsibleHeaderCtrl_CLASSINFO();
wxCollapsibleHeaderCtrl *wxCollapsibleHeaderCtrl_new();
wxCollapsibleHeaderCtrl *wxCollapsibleHeaderCtrl_new1(wxWindow * parent, wxWindowID id, const wxString * label, const wxPoint * pos, const wxSize * size, long style, const wxValidator * validator, const wxString * name);
bool wxCollapsibleHeaderCtrl_Create(wxCollapsibleHeaderCtrl * self, wxWindow * parent, wxWindowID id, const wxString * label, const wxPoint * pos, const wxSize * size, long style, const wxValidator * validator, const wxString * name);
void wxCollapsibleHeaderCtrl_SetCollapsed(wxCollapsibleHeaderCtrl * self, bool collapsed);
bool wxCollapsibleHeaderCtrl_IsCollapsed(const wxCollapsibleHeaderCtrl * self);
// CLASS: wxCollapsiblePane
wxClassInfo *wxCollapsiblePane_CLASSINFO();
wxCollapsiblePane *wxCollapsiblePane_new();
wxCollapsiblePane *wxCollapsiblePane_new1(wxWindow * parent, wxWindowID id, const wxString * label, const wxPoint * pos, const wxSize * size, long style, const wxValidator * validator, const wxString * name);
bool wxCollapsiblePane_Create(wxCollapsiblePane * self, wxWindow * parent, wxWindowID id, const wxString * label, const wxPoint * pos, const wxSize * size, long style, const wxValidator * validator, const wxString * name);
void wxCollapsiblePane_Collapse(wxCollapsiblePane * self, bool collapse);
void wxCollapsiblePane_Expand(wxCollapsiblePane * self);
wxWindow * wxCollapsiblePane_GetPane(const wxCollapsiblePane * self);
bool wxCollapsiblePane_IsCollapsed(const wxCollapsiblePane * self);
bool wxCollapsiblePane_IsExpanded(const wxCollapsiblePane * self);
// CLASS: wxCollapsiblePaneEvent
wxClassInfo *wxCollapsiblePaneEvent_CLASSINFO();
wxCollapsiblePaneEvent *wxCollapsiblePaneEvent_new(wxObject * generator, int id, bool collapsed);
bool wxCollapsiblePaneEvent_GetCollapsed(const wxCollapsiblePaneEvent * self);
void wxCollapsiblePaneEvent_SetCollapsed(wxCollapsiblePaneEvent * self, bool collapsed);
// CLASS: wxColour
wxClassInfo *wxColour_CLASSINFO();
wxColour *wxColour_new();
wxColour *wxColour_new2(const wxString * colour_name);
wxColour *wxColour_new4(const wxColour * colour);
unsigned int wxColour_GetAlpha(const wxColour * self);
unsigned int wxColour_GetBlue(const wxColour * self);
unsigned int wxColour_GetGreen(const wxColour * self);
unsigned int wxColour_GetRed(const wxColour * self);
wxString *wxColour_GetAsString(const wxColour * self, long flags);
double wxColour_GetLuminance(const wxColour * self);
bool wxColour_IsOk(const wxColour * self);
bool wxColour_IsSolid(const wxColour * self);
bool wxColour_Set2(wxColour * self, const wxString * str);
void wxColour_MakeMono(unsigned char * r, unsigned char * g, unsigned char * b, bool on);
void wxColour_MakeGrey(unsigned char * r, unsigned char * g, unsigned char * b);
void wxColour_MakeGrey1(unsigned char * r, unsigned char * g, unsigned char * b, double weight_r, double weight_g, double weight_b);
void wxColour_ChangeLightness1(unsigned char * r, unsigned char * g, unsigned char * b, int ialpha);
// CLASS: wxColourData
wxClassInfo *wxColourData_CLASSINFO();
wxColourData *wxColourData_new();
bool wxColourData_GetChooseFull(const wxColourData * self);
bool wxColourData_GetChooseAlpha(const wxColourData * self);
wxColour * wxColourData_GetColour(wxColourData * self);
wxColour *wxColourData_GetCustomColour(const wxColourData * self, int i);
void wxColourData_SetChooseFull(wxColourData * self, bool flag);
void wxColourData_SetChooseAlpha(wxColourData * self, bool flag);
void wxColourData_SetColour(wxColourData * self, const wxColour * colour);
void wxColourData_SetCustomColour(wxColourData * self, int i, const wxColour * colour);
wxString *wxColourData_ToString(const wxColourData * self);
bool wxColourData_FromString(wxColourData * self, const wxString * str);
// CLASS: wxColourDatabase
void wxColourDatabase_delete(wxColourDatabase *self);
wxColourDatabase *wxColourDatabase_new();
void wxColourDatabase_AddColour(wxColourDatabase * self, const wxString * colour_name, const wxColour * colour);
wxColour *wxColourDatabase_Find(const wxColourDatabase * self, const wxString * colour_name);
wxString *wxColourDatabase_FindName(const wxColourDatabase * self, const wxColour * colour);
// CLASS: wxColourDialog
wxClassInfo *wxColourDialog_CLASSINFO();
wxColourDialog *wxColourDialog_new(wxWindow * parent, const wxColourData * data);
bool wxColourDialog_Create(wxColourDialog * self, wxWindow * parent, const wxColourData * data);
wxColourData * wxColourDialog_GetColourData(wxColourDialog * self);
// CLASS: wxColourDialogEvent
wxClassInfo *wxColourDialogEvent_CLASSINFO();
wxColourDialogEvent *wxColourDialogEvent_new();
wxColour *wxColourDialogEvent_GetColour(const wxColourDialogEvent * self);
void wxColourDialogEvent_SetColour(wxColourDialogEvent * self, const wxColour * colour);
// CLASS: wxColourPickerCtrl
wxClassInfo *wxColourPickerCtrl_CLASSINFO();
wxColourPickerCtrl *wxColourPickerCtrl_new();
wxColourPickerCtrl *wxColourPickerCtrl_new1(wxWindow * parent, wxWindowID id, const wxColour * colour, const wxPoint * pos, const wxSize * size, long style, const wxValidator * validator, const wxString * name);
bool wxColourPickerCtrl_Create(wxColourPickerCtrl * self, wxWindow * parent, wxWindowID id, const wxColour * colour, const wxPoint * pos, const wxSize * size, long style, const wxValidator * validator, const wxString * name);
wxColour *wxColourPickerCtrl_GetColour(const wxColourPickerCtrl * self);
void wxColourPickerCtrl_SetColour(wxColourPickerCtrl * self, const wxColour * col);
// CLASS: wxColourPickerEvent
wxClassInfo *wxColourPickerEvent_CLASSINFO();
wxColourPickerEvent *wxColourPickerEvent_new();
wxColourPickerEvent *wxColourPickerEvent_new1(wxObject * generator, int id, const wxColour * colour);
wxColour *wxColourPickerEvent_GetColour(const wxColourPickerEvent * self);
void wxColourPickerEvent_SetColour(wxColourPickerEvent * self, const wxColour * pos);