wx-core/src/generated/ffi_c.rs


    // wxChoicebook
    pub fn wxChoicebook_CLASSINFO() -> *mut c_void;
    pub fn wxChoicebook_new() -> *mut c_void;
    pub fn wxChoicebook_new1(
        parent: *mut c_void,
        id: c_int,
        pos: *const c_void,
        size: *const c_void,
        style: c_long,
        name: *const c_void,
    ) -> *mut c_void;
    pub fn wxChoicebook_Create(
        self_: *mut c_void,
        parent: *mut c_void,
        id: c_int,
        pos: *const c_void,
        size: *const c_void,
        style: c_long,
        name: *const c_void,
    ) -> bool;
    pub fn wxChoicebook_GetChoiceCtrl(self_: *const c_void) -> *mut c_void;

    // wxClipboard
    pub fn wxClipboard_CLASSINFO() -> *mut c_void;
    pub fn wxClipboard_new() -> *mut c_void;
    // DTOR: pub fn wxClipboard_~wxClipboard(self_: *mut c_void);
    pub fn wxClipboard_AddData(self_: *mut c_void, data: *mut c_void) -> bool;
    pub fn wxClipboard_Clear(self_: *mut c_void);
    pub fn wxClipboard_Close(self_: *mut c_void);
    pub fn wxClipboard_Flush(self_: *mut c_void) -> bool;
    pub fn wxClipboard_GetData(self_: *mut c_void, data: *mut c_void) -> bool;
    pub fn wxClipboard_IsOpened(self_: *const c_void) -> bool;
    pub fn wxClipboard_IsSupported(self_: *mut c_void, format: *const c_void) -> bool;
    pub fn wxClipboard_IsUsingPrimarySelection(self_: *const c_void) -> bool;
    pub fn wxClipboard_Open(self_: *mut c_void) -> bool;
    pub fn wxClipboard_SetData(self_: *mut c_void, data: *mut c_void) -> bool;
    pub fn wxClipboard_UsePrimarySelection(self_: *mut c_void, primary: bool);
    pub fn wxClipboard_Get() -> *mut c_void;

    // wxClipboardTextEvent
    pub fn wxClipboardTextEvent_CLASSINFO() -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxClipboardTextEvent_new(command_type: wxEventType, id: c_int) -> *mut c_void;

    // wxCloseEvent
    pub fn wxCloseEvent_CLASSINFO() -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxCloseEvent_new(command_event_type: wxEventType, id: c_int) -> *mut c_void;
    pub fn wxCloseEvent_CanVeto(self_: *const c_void) -> bool;
    pub fn wxCloseEvent_GetLoggingOff(self_: *const c_void) -> bool;
    pub fn wxCloseEvent_SetCanVeto(self_: *mut c_void, can_veto: bool);
    pub fn wxCloseEvent_SetLoggingOff(self_: *mut c_void, logging_off: bool);
    pub fn wxCloseEvent_Veto(self_: *mut c_void, veto: bool);
    pub fn wxCloseEvent_GetVeto(self_: *const c_void) -> bool;

    // wxCollapsibleHeaderCtrl
    pub fn wxCollapsibleHeaderCtrl_CLASSINFO() -> *mut c_void;
    pub fn wxCollapsibleHeaderCtrl_new() -> *mut c_void;
    pub fn wxCollapsibleHeaderCtrl_new1(
        parent: *mut c_void,
        id: c_int,
        label: *const c_void,
        pos: *const c_void,
        size: *const c_void,
        style: c_long,
        validator: *const c_void,
        name: *const c_void,
    ) -> *mut c_void;
    pub fn wxCollapsibleHeaderCtrl_Create(
        self_: *mut c_void,
        parent: *mut c_void,
        id: c_int,
        label: *const c_void,
        pos: *const c_void,
        size: *const c_void,
        style: c_long,
        validator: *const c_void,
        name: *const c_void,
    ) -> bool;
    pub fn wxCollapsibleHeaderCtrl_SetCollapsed(self_: *mut c_void, collapsed: bool);
    pub fn wxCollapsibleHeaderCtrl_IsCollapsed(self_: *const c_void) -> bool;

    // wxCollapsiblePane
    pub fn wxCollapsiblePane_CLASSINFO() -> *mut c_void;
    pub fn wxCollapsiblePane_new() -> *mut c_void;
    pub fn wxCollapsiblePane_new1(
        parent: *mut c_void,
        id: c_int,
        label: *const c_void,
        pos: *const c_void,
        size: *const c_void,
        style: c_long,
        validator: *const c_void,
        name: *const c_void,
    ) -> *mut c_void;
    pub fn wxCollapsiblePane_Create(
        self_: *mut c_void,
        parent: *mut c_void,
        id: c_int,
        label: *const c_void,
        pos: *const c_void,
        size: *const c_void,
        style: c_long,
        validator: *const c_void,
        name: *const c_void,
    ) -> bool;
    pub fn wxCollapsiblePane_Collapse(self_: *mut c_void, collapse: bool);
    pub fn wxCollapsiblePane_Expand(self_: *mut c_void);
    pub fn wxCollapsiblePane_GetPane(self_: *const c_void) -> *mut c_void;
    pub fn wxCollapsiblePane_IsCollapsed(self_: *const c_void) -> bool;
    pub fn wxCollapsiblePane_IsExpanded(self_: *const c_void) -> bool;

    // wxCollapsiblePaneEvent
    pub fn wxCollapsiblePaneEvent_CLASSINFO() -> *mut c_void;
    pub fn wxCollapsiblePaneEvent_new(
        generator: *mut c_void,
        id: c_int,
        collapsed: bool,
    ) -> *mut c_void;
    pub fn wxCollapsiblePaneEvent_GetCollapsed(self_: *const c_void) -> bool;
    pub fn wxCollapsiblePaneEvent_SetCollapsed(self_: *mut c_void, collapsed: bool);

    // wxColour
    pub fn wxColour_CLASSINFO() -> *mut c_void;
    pub fn wxColour_new() -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxColour_new1(red: unsigned char, green: unsigned char, blue: unsigned char, alpha: unsigned char) -> *mut c_void;
    pub fn wxColour_new2(colour_name: *const c_void) -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxColour_new3(col_rgb: unsigned long) -> *mut c_void;
    pub fn wxColour_new4(colour: *const c_void) -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxColour_Alpha(self_: *const c_void) -> unsigned char;
    // NOT_SUPPORTED: pub fn wxColour_Blue(self_: *const c_void) -> unsigned char;
    pub fn wxColour_GetAlpha(self_: *const c_void) -> c_uint;
    pub fn wxColour_GetBlue(self_: *const c_void) -> c_uint;
    pub fn wxColour_GetGreen(self_: *const c_void) -> c_uint;
    pub fn wxColour_GetRed(self_: *const c_void) -> c_uint;
    pub fn wxColour_GetAsString(self_: *const c_void, flags: c_long) -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxColour_SetRGB(self_: *mut c_void, col_rgb: wxUint32);
    // NOT_SUPPORTED: pub fn wxColour_SetRGBA(self_: *mut c_void, col_rgba: wxUint32);
    // NOT_SUPPORTED: pub fn wxColour_GetRGB(self_: *const c_void) -> wxUint32;
    // NOT_SUPPORTED: pub fn wxColour_GetRGBA(self_: *const c_void) -> wxUint32;
    pub fn wxColour_GetLuminance(self_: *const c_void) -> c_double;
    // NOT_SUPPORTED: pub fn wxColour_GetPixel(self_: *const c_void) -> wxIntPtr;
    // NOT_SUPPORTED: pub fn wxColour_Green(self_: *const c_void) -> unsigned char;
    pub fn wxColour_IsOk(self_: *const c_void) -> bool;
    // NOT_SUPPORTED: pub fn wxColour_Red(self_: *const c_void) -> unsigned char;
    pub fn wxColour_IsSolid(self_: *const c_void) -> bool;
    // NOT_SUPPORTED: pub fn wxColour_Set(self_: *mut c_void, red: unsigned char, green: unsigned char, blue: unsigned char, alpha: unsigned char);
    // NOT_SUPPORTED: pub fn wxColour_Set1(self_: *mut c_void, rgb: unsigned long);
    pub fn wxColour_Set2(self_: *mut c_void, str: *const c_void) -> bool;
    // BLOCKED: pub fn wxColour_operator!=(self_: *const c_void, colour: *const c_void) -> bool;
    // BLOCKED: pub fn wxColour_operator=(self_: *mut c_void, colour: *const c_void) -> *mut c_void;
    // BLOCKED: pub fn wxColour_operator==(self_: *const c_void, colour: *const c_void) -> bool;
    // NOT_SUPPORTED: pub fn wxColour_MakeDisabled(self_: *mut c_void, brightness: unsigned char) -> *mut c_void;
    // BLOCKED: pub fn wxColour_ChangeLightness(self_: *const c_void, ialpha: c_int) -> wxColour;
    pub fn wxColour_MakeMono(r: *mut c_void, g: *mut c_void, b: *mut c_void, on: bool);
    // NOT_SUPPORTED: pub fn wxColour_MakeDisabled1(r: *mut c_void, g: *mut c_void, b: *mut c_void, brightness: unsigned char);
    pub fn wxColour_MakeGrey(r: *mut c_void, g: *mut c_void, b: *mut c_void);
    pub fn wxColour_MakeGrey1(
        r: *mut c_void,
        g: *mut c_void,
        b: *mut c_void,
        weight_r: c_double,
        weight_g: c_double,
        weight_b: c_double,
    );
    // NOT_SUPPORTED: pub fn wxColour_AlphaBlend(fg: unsigned char, bg: unsigned char, alpha: c_double) -> unsigned char;
    pub fn wxColour_ChangeLightness1(r: *mut c_void, g: *mut c_void, b: *mut c_void, ialpha: c_int);

    // wxColourData
    pub fn wxColourData_CLASSINFO() -> *mut c_void;
    pub fn wxColourData_new() -> *mut c_void;
    // DTOR: pub fn wxColourData_~wxColourData(self_: *mut c_void);
    pub fn wxColourData_GetChooseFull(self_: *const c_void) -> bool;
    pub fn wxColourData_GetChooseAlpha(self_: *const c_void) -> bool;
    pub fn wxColourData_GetColour(self_: *mut c_void) -> *mut c_void;
    pub fn wxColourData_GetCustomColour(self_: *const c_void, i: c_int) -> *mut c_void;
    pub fn wxColourData_SetChooseFull(self_: *mut c_void, flag: bool);
    pub fn wxColourData_SetChooseAlpha(self_: *mut c_void, flag: bool);
    pub fn wxColourData_SetColour(self_: *mut c_void, colour: *const c_void);
    pub fn wxColourData_SetCustomColour(self_: *mut c_void, i: c_int, colour: *const c_void);
    pub fn wxColourData_ToString(self_: *const c_void) -> *mut c_void;
    pub fn wxColourData_FromString(self_: *mut c_void, str: *const c_void) -> bool;
    // BLOCKED: pub fn wxColourData_operator=(self_: *mut c_void, data: *const c_void) -> *mut c_void;

    // wxColourDatabase
    pub fn wxColourDatabase_delete(self_: *mut c_void);
    pub fn wxColourDatabase_new() -> *mut c_void;
    pub fn wxColourDatabase_AddColour(
        self_: *mut c_void,
        colour_name: *const c_void,
        colour: *const c_void,
    );
    pub fn wxColourDatabase_Find(self_: *const c_void, colour_name: *const c_void) -> *mut c_void;
    pub fn wxColourDatabase_FindName(self_: *const c_void, colour: *const c_void) -> *mut c_void;

    // wxColourDialog
    pub fn wxColourDialog_CLASSINFO() -> *mut c_void;
    pub fn wxColourDialog_new(parent: *mut c_void, data: *const c_void) -> *mut c_void;
    // DTOR: pub fn wxColourDialog_~wxColourDialog(self_: *mut c_void);
    pub fn wxColourDialog_Create(
        self_: *mut c_void,
        parent: *mut c_void,
        data: *const c_void,
    ) -> bool;
    pub fn wxColourDialog_GetColourData(self_: *mut c_void) -> *mut c_void;

    // wxColourDialogEvent
    pub fn wxColourDialogEvent_CLASSINFO() -> *mut c_void;
    pub fn wxColourDialogEvent_new() -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxColourDialogEvent_new1(evt_type: wxEventType, dialog: *mut c_void, colour: *const c_void) -> *mut c_void;
    pub fn wxColourDialogEvent_GetColour(self_: *const c_void) -> *mut c_void;
    pub fn wxColourDialogEvent_SetColour(self_: *mut c_void, colour: *const c_void);

    // wxColourPickerCtrl
    pub fn wxColourPickerCtrl_CLASSINFO() -> *mut c_void;
    pub fn wxColourPickerCtrl_new() -> *mut c_void;
    pub fn wxColourPickerCtrl_new1(
        parent: *mut c_void,
        id: c_int,
        colour: *const c_void,
        pos: *const c_void,
        size: *const c_void,
        style: c_long,
        validator: *const c_void,
        name: *const c_void,
    ) -> *mut c_void;
    pub fn wxColourPickerCtrl_Create(
        self_: *mut c_void,
        parent: *mut c_void,
        id: c_int,
        colour: *const c_void,
        pos: *const c_void,
        size: *const c_void,
        style: c_long,
        validator: *const c_void,
        name: *const c_void,
    ) -> bool;
    pub fn wxColourPickerCtrl_GetColour(self_: *const c_void) -> *mut c_void;
    pub fn wxColourPickerCtrl_SetColour(self_: *mut c_void, col: *const c_void);
    // BLOCKED: pub fn wxColourPickerCtrl_SetColour1(self_: *mut c_void, colname: *const c_void);

    // wxColourPickerEvent
    pub fn wxColourPickerEvent_CLASSINFO() -> *mut c_void;
    pub fn wxColourPickerEvent_new() -> *mut c_void;
    pub fn wxColourPickerEvent_new1(
        generator: *mut c_void,
        id: c_int,
        colour: *const c_void,
    ) -> *mut c_void;
    pub fn wxColourPickerEvent_GetColour(self_: *const c_void) -> *mut c_void;
    pub fn wxColourPickerEvent_SetColour(self_: *mut c_void, pos: *const c_void);
